<!--
  ~  license-start
  ~  eu-digital-green-certificates / dgca-verifier-app-android
  ~
  ~  Copyright (C) 2021 T-Systems International GmbH and all other contributors
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~  license-end
  ~
  ~  Created by Mykhailo Nester on 4/23/21 9:53 AM
  -->

<resources>
    <string name="app_name">Green Pass App</string>

    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="scan_green_pass">Green Pass App</string>
    <string name="controlCertificate">Verifica una certificazione</string>
    <string name="welcome">Benvenuto</string>
    <string name="systemDescription">Con la scansione dei QR Code è possibile verificare la validità e l\'autenticità della Certificazione verde COVID-19. Green Pass App permette anche il controllo dell\'EU Digital Covid Certificate emesso da altri paesi europei.</string>
    <string name="privacyPolicy"><u>Privacy policy</u></string>
    <string name="codiceFiscale">Codice fiscale</string>
    <string name="expirationText">Data scadenza certificato</string>
    <string name="certificateValid">Certificazione valida</string>
    <string name="certificateNonValid">Certificazione non valida</string>
    <string name="scanError">Errore di lettura</string>
    <string name="subtitle_text">Per completare la verifica è necessario confrontare i dati anagrafici qui sotto riportati con quelli di un valido documento d\'identità (es. Carta d\'identità).</string>
    <string name="subtitle_text_nonvalid">Il QR Code o la chiave di firma non sono validi.</string>
    <string name="subtitle_text_notDCC">Il QR Code scansionato non corrisponde a una Certificazione verde COVID-19 o non è stato letto in modo corretto, si prega di riprovare.</string>
    <string name="subtitle_text_expired">La Certificazione è scaduta.</string>
    <string name="subtitle_text_future">La Certificazione non è ancora valida.</string>
    <string name="subtitle_text_technicalError">La Certificazione non è valida o non è stato possibile verificarla.</string>
    <string name="scanQrCertificate">Scansiona il QR Code. </string>
    <string name="scanQr">Avvia scansione </string>
    <string name="nextQR">Prossima scansione</string>
    <string name="repeatQR">Ripeti scansione</string>
    <string name="dateOfBirth">Data di nascita</string>
    <string name="lastSyncDate">Ultimo aggiornamento: %1$s</string>
    <string name="loading">Caricamento certificati in corso</string>
    <string name="notAvailable">N/A</string>
    <string name="updateTitle">Aggiornamento richiesto</string>
    <string name="updateMessage">Per continuare ad utilizzare l\'applicazione, scarica la nuova versione dallo store</string>
    <string name="updateLabel">Aggiorna</string>
    <string name="noKeyAlertTitle">Impossibile scansionare</string>
    <string name="noKeyAlertMessage">L\'applicazione deve connettersi alla rete almeno una volta per essere utilizzata</string>
    <string name="ok">OK</string>
    <string name="next">Avanti</string>
    <string name="back">Indietro</string>
    <string name="version">v. %1$s</string>
    <string name="privacyTitle"></string>
    <string name="privacy">Green Pass App è una estensione dell\'app ufficiale del Ministero della Salute per la verifica di validità e autenticità delle Certificazioni Verdi Covid19. La verifica avviene scansionando il QRcode presente sulla certificazione tramite la fotocamera del dispositivo. Nessun dato letto dalla Certificazione viene memorizzato sul dispositivo con cui si effettua la verifica.
\n\nPer utilizzare l\'App è necessario fornire il consenso all\'uso della fotocamera.</string>

    <string name="homeMessage">Con Green Pass App puoi aggiungere tutti i green pass che vuoi per portarli sempre con te.\nPer iniziare è semplice, basta inquadrare il QRCode.\nInfine puoi verificare se i tuoi Green Pass o quelli degli altri sono autentici\n\nPer iniziare premi il bottone rotondo in basso a destra</string>
    <string name="back_to_home">Torna alla home</string>

    <string name="label_verify_green_pass">Verifica una\n<b>Certificazione\nverde Covid-19</b></string>
    <string name="label_scan_qr_code">Scansiona il QR CODE</string>
    <string name="label_read_faq"><u><b>Leggi le domande frequenti</b></u></string>
    <string name="label_verification_location"><b><u>Quali sono i luoghi e gli eventi che la prevedono?</u></b></string>
    <string name="label_name">Nome/Name</string>
    <string name="label_close">Chiudi</string>
    <string name="label_return_home">Torna all\'inizio</string>
    <string name="certificatePartiallyValid">Certificazione valida solo in Italia</string>
    <string name="label_what_can_be_done">Cosa si può fare con la certificazione verde COVID-19</string>
    <string name="label_why_qr_not_valid">Quali sono i motivi di non validità?</string>
    <string name="label_when_qr_valid">Quali sono i tempi di inizio validità?</string>
    <string name="label_which_qr_scan">Quale QR Code scansionare?</string>
    <string name="label_scan_error_meaning">Cosa significa errore di lettura?</string>
    <string name="label_scan_times_needed">Quante volte devo riprovare a scansionare</string>
    <string name="label_validation_timestamp">Ora e data di validazione: %1$s</string>

    <string name="subtitle_text_notvalid">La certificazione presenta i seguenti dati anagrafici:</string>
    <string name="certificateNonValidYet">Certificazione non ancora valida</string>
    <string name="certificateNotDCC">Errore di lettura del QR Code, oppure non è il Certificato verde COVID-19</string>

</resources>
