<?xml version="1.0" encoding="utf-8"?><!--
   ~ license-start
   ~
   ~ Copyright (C) 2021 Ministero della Salute and all other contributors
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
   ~ You may obtain a copy of the License at
   ~
   ~     http://www.apache.org/licenses/LICENSE-2.0
   ~
   ~ Unless required by applicable law or agreed to in writing, software
   ~ distributed under the License is distributed on an "AS IS" BASIS,
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingTop="@dimen/padding_20dp"
        android:paddingBottom="@dimen/padding_20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_20dp">

                <ImageButton
                    android:id="@+id/close_button"
                    android:layout_width="@dimen/size_35dp"
                    android:layout_height="@dimen/size_35dp"
                    android:background="@drawable/circular"
                    android:padding="@dimen/padding_10dp"
                    tools:visibility="invisible"
                    android:src="@drawable/ic_close"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/checkmark"
                    android:layout_width="@dimen/size_100dp"
                    android:layout_height="@dimen/size_100dp"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/padding_10dp"
                    tools:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/close_button"
                    tools:background="@drawable/ic_checkmark_filled" />

                <TextView
                    android:id="@+id/certificate_valid"
                    style="@style/H1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:fontFamily="@font/titiliumfont"
                    android:textSize="32sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkmark"
                    tools:text="@string/certificateValid"
                    tools:visibility="gone" />

                <TextView
                    android:id="@+id/subtitle_text"
                    style="@style/H3.Black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/certificate_valid"
                    tools:text="@string/subtitle_text"
                    tools:visibility="gone" />

                <LinearLayout
                    android:id="@+id/container_custom_person_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible">

                    <ImageView
                        android:id="@+id/qrcodeImage"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="fitCenter" />
                    <TextView
                        android:text="Clicca sul QRCode per ingrandirlo"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/nameSurname"
                        style="@style/H2.Black.Bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="ewfwefewf"
                        android:textAllCaps="true"
                        android:textColor="@color/blue_dark"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/vaccineLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        android:weightSum="1">


                        <TextView
                            style="@style/H3.Black.Bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="Data di nascita"
                            android:textColor="@color/blue_dark" />

                        <TextView
                            android:id="@+id/dateBirth"
                            style="@style/H3.Black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="22/12/1989"
                            android:textColor="@color/blue_dark" />

                        <TextView
                            style="@style/H3.Black.Bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="Vaccino"
                            android:textColor="@color/blue_dark" />

                        <TextView
                            android:id="@+id/vaccineType"
                            style="@style/H3.Black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="Vaxzeria"
                            android:textColor="@color/blue_dark" />


                        <TextView
                            style="@style/H3.Black.Bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="Data vaccinazione"
                            android:textColor="@color/blue_dark" />

                        <TextView
                            android:id="@+id/dateVaccination"
                            style="@style/H3.Black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="22/12/1989"
                            android:textColor="@color/blue_dark" />

                        <TextView
                            style="@style/H3.Black.Bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="Dosi effettuate"
                            android:textColor="@color/blue_dark" />

                        <TextView
                            android:id="@+id/numberOFVaccines"
                            style="@style/H3.Black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="2"
                            android:textColor="@color/blue_dark" />

                        <TextView
                            style="@style/H3.Black.Bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="Data scadenza"
                            android:textColor="@color/blue_dark" />

                        <TextView
                            android:id="@+id/expireDate"
                            style="@style/H3.Black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text=""
                            android:textColor="@color/blue_dark" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/delete"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="end"
                            android:text="Elimina"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container_person_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/subtitle_text"
                    tools:visibility="gone">

                    <ImageView
                        android:id="@+id/user_image"
                        android:layout_width="@dimen/size_35dp"
                        android:layout_height="@dimen/size_35dp"
                        android:src="@drawable/ic_user"
                        app:layout_constraintBottom_toBottomOf="@+id/name_standardised_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/name_text" />

                    <TextView
                        android:id="@+id/name_text"
                        style="@style/H3.Black.Bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16dp"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="@id/container_person_details"
                        app:layout_constraintStart_toEndOf="@+id/user_image"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Mario Rossi" />

                    <TextView
                        android:id="@+id/name_standardised_text"
                        style="@style/H3.Black"
                        android:layout_width="87dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="@dimen/margin_16dp"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@+id/user_image"
                        app:layout_constraintTop_toBottomOf="@+id/name_text"
                        tools:text="MARIO ROSSI" />

                    <ImageView
                        android:id="@+id/birthday_image"
                        android:layout_width="@dimen/size_35dp"
                        android:layout_height="@dimen/size_35dp"
                        android:src="@drawable/ic_calendar"
                        app:layout_constraintBottom_toBottomOf="@+id/birthdate_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/birthdate_label" />

                    <TextView
                        android:id="@+id/birthdate_label"
                        style="@style/H3.Black.Bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16dp"
                        android:layout_marginTop="@dimen/margin_20dp"
                        android:text="@string/dateOfBirth"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@+id/birthday_image"
                        app:layout_constraintTop_toBottomOf="@+id/name_standardised_text" />

                    <TextView
                        android:id="@+id/birthdate_text"
                        style="@style/H3.Black"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16dp"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@+id/birthday_image"
                        app:layout_constraintTop_toBottomOf="@+id/birthdate_label"
                        tools:text="10/05/1993" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/next_qr_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:background="@drawable/background_rounded_blue"
                    android:padding="@dimen/padding_16dp"
                    android:text="@string/repeatQR"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/container_person_details"
                    app:layout_goneMarginTop="150dp"
                    tools:visibility="gone" />

                <Button
                    android:id="@+id/home_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_rounded_blue"
                    android:padding="@dimen/padding_16dp"
                    android:text="@string/back_to_home"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/next_qr_button"
                    app:layout_goneMarginTop="150dp"
                    tools:visibility="gone" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/size_50dp"
        android:layout_height="@dimen/size_50dp"
        android:indeterminateTint="@color/blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>